CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( k-means )
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

FIND_PACKAGE( OpenCV REQUIRED )
MESSAGE("OpenCV found, version : " ${OpenCV_VERSION})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

find_package(Boost 1.49.0 COMPONENTS program_options REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FILE(GLOB SRC src/*.cpp)
add_subdirectory(src)
